# home_work_virtual_environment

./: .gitignore  README.md  __main__.py  pyproject.toml
src/: masks.py  processing.py  widget.py
tests/: conftest.py  test_main.py
utils/: masks.py
